fix: Fix spacing on admin pages

--- a/src/pages/admin/admin-announce/admin-announce.page.css
+++ b/src/pages/admin/admin-announce/admin-announce.page.css
@@ -1,5 +1,9 @@
-
 #back-button {
   display: flex;
   justify-content: center;
+}
+
+#admin-announce__form {
+  margin-top: 0;
+  padding-top: 6rem;
 }
