--- a/src/pages/admin/admin-teams/admin-teams.page.css
+++ b/src/pages/admin/admin-teams/admin-teams.page.css
@@ -1,6 +1,5 @@
-
 #admin-teams-page {
-  padding: 10rem 10% 6rem 10%;
+  padding: 6rem 10% 6rem 10%;
 }
 
 #admin-teams-page > table {
